# notion-cli

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: release.yml  tests.yml
examples/: bulk_create_pages.csv  bulk_create_pages.json  bulk_delete_pages.csv  bulk_update_pages.csv  quick_start.py
notion_cli/: __init__.py  cli.py  client.py  config.py  formatters.py  interactive.py  utils.py
notion_cli/commands/: __init__.py  block.py  bulk.py  config.py  database.py  page.py  search.py  user.py
tests/: __init__.py  conftest.py  test_bulk.py  test_client.py  test_config.py  test_formatters.py  test_user.py
